Fixing reference to the parameteer

--- a/retainBuild.yml
+++ b/retainBuild.yml
@@ -20,7 +20,7 @@ steps:
       script: |
         $contentType = "application/json";
         $headers = @{ Authorization = 'Bearer $(System.AccessToken)' };
-        $rawRequest = @{ daysValid = $(numberOfDaysRetainment); definitionId = $(System.DefinitionId); ownerId = 'User:$(Build.RequestedForId)'; protectPipeline = $false; runId = $(Build.BuildId) };
+        $rawRequest = @{ daysValid = ${{ parameters.numberOfDaysRetainment }}; definitionId = $(System.DefinitionId); ownerId = 'User:$(Build.RequestedForId)'; protectPipeline = $false; runId = $(Build.BuildId) };
         $request = ConvertTo-Json @($rawRequest);
         $uri = "$(System.CollectionUri)$(System.TeamProject)/_apis/build/retention/leases?api-version=6.0-preview.1";
         Invoke-RestMethod -uri $uri -method POST -Headers $headers -ContentType $contentType -Body $request;
