--- a/retainReleaseBuild.yml
+++ b/retainReleaseBuild.yml
@@ -8,11 +8,14 @@ parameters:
     default: 'Execute scan with retries'
     displayName: 'Retain Build if succeeded'
 
+variables:
+  - name: isReleaseTag
+    value: $[startswith(variables['Build.SourceBranch'], 'refs/tags/v')]
 
 steps:
   - task: PowerShell@2
-    condition: and(succeeded(), not(canceled()))
-    name: RetainOnSuccess
+    condition: and(and(succeeded(), not(canceled())), eq(variables['isReleaseTag'], false))
+    name: RetainReleaseBuild
     displayName: ${{ parameters.displayName }}
     inputs:
       failOnStderr: true
