--- a/retainReleaseBuild.yml
+++ b/retainReleaseBuild.yml
@@ -3,13 +3,11 @@ parameters:
     type: string
     default: 365
     displayName: 'Number of days to retain the build'
- 
 
 steps:
   - powershell: |
       Write-Host "branch: ${env:BUILD_SOURCEBRANCH}"
-      # $isReleaseTag = $($env:BUILD_SOURCEBRANCH -like 'refs/tags/v*')
-      $isReleaseTag = $env:BUILD_SOURCEBRANCH -like 'refs/heads/feature/*'
+      $isReleaseTag = $($env:BUILD_SOURCEBRANCH -like 'refs/tags/v*')
       Write-Host "isReleaseTag: $isReleaseTag"
       Write-Host "##vso[task.setvariable variable=isReleaseTag]$isReleaseTag"
     displayName: 'Check if release'
