--- a/retainBuild.yml
+++ b/retainBuild.yml
@@ -16,7 +16,7 @@ steps:
     displayName: 'Display condition'
 
   - task: PowerShell@2
-    condition: eq('${{ parameters.condition }}', 'true')
+    condition: eq(${{ parameters.condition }}, 'true')
     displayName: 'Retain Build'
     inputs:
       failOnStderr: true
