--- a/build.yml
+++ b/build.yml
@@ -51,7 +51,8 @@ parameters:
   default: 365 # number of days to retain the build
 - name: isReleaseBuild
   type: string
-  default: startswith(variables['Build.SourceBranch'], 'refs/tags/v') # if evaluated to true, the build will be retained for the provided duration
+  # default: startswith(variables['Build.SourceBranch'], 'refs/tags/v') # if evaluated to true, the build will be retained for the provided duration
+  default: startswith(variables['Build.SourceBranch'], 'refs/heads/dev) # if evaluated to true, the build will be retained for the provided duration
 
 jobs:
 - job: Build
@@ -69,7 +70,7 @@ jobs:
   - template: retainBuild.yml
     parameters:
       numberOfDaysRetainment: ${{ parameters.numberOfDaysRetainmentForReleaseBuild }}
-      condition: and(succeeded(), eq(${{ parameters.isReleaseBuild }}, 'false'))
+      condition: and(succeeded(), ${{ parameters.isReleaseBuild }})
 
   ## retrieve the version suffix from the props file and set it as a variable
   - powershell: |
@@ -216,4 +217,4 @@ jobs:
   - template: retainBuild.yml
     parameters:
       numberOfDaysRetainment: ${{ parameters.numberOfDaysRetainmentForReleaseBuild }}
-      condition: and(succeeded(), eq(${{ parameters.isReleaseBuild }}, 'true'))
+      condition: and(succeeded(), ${{ parameters.isReleaseBuild })
