--- a/build.yml
+++ b/build.yml
@@ -49,10 +49,9 @@ parameters:
 - name: numberOfDaysRetainmentForReleaseBuild
   type: number
   default: 365 # number of days to retain the build
-- name: isReleaseBuild
+- name: isReleaseBuildExpression
   type: string
-  # default: startswith(variables['Build.SourceBranch'], 'refs/tags/v') # if evaluated to true, the build will be retained for the provided duration
-  default: startswith(variables['Build.SourceBranch'], 'refs/heads/dev') # if evaluated to true, the build will be retained for the provided duration
+  default: startswith(variables['Build.SourceBranch'], 'refs/tags/v') # if evaluated to true, the build will be retained for the provided duration
 
 jobs:
 - job: Build
@@ -65,12 +64,6 @@ jobs:
   - ${{ if eq(parameters.checkoutSubmodules, 'true') }}:
     - checkout: self
       submodules: true
-
- # TODO: remove when working
-  - template: retainBuild.yml
-    parameters:
-      numberOfDaysRetainment: ${{ parameters.numberOfDaysRetainmentForReleaseBuild }}
-      condition: and(succeeded(), ${{ parameters.isReleaseBuild }})
 
   ## retrieve the version suffix from the props file and set it as a variable
   - powershell: |
@@ -217,4 +210,4 @@ jobs:
   - template: retainBuild.yml
     parameters:
       numberOfDaysRetainment: ${{ parameters.numberOfDaysRetainmentForReleaseBuild }}
-      condition: and(succeeded(), ${{ parameters.isReleaseBuild }})
+      condition: and(succeeded(), ${{ parameters.isReleaseBuildExpression }})
