--- a/scanWithRetryTask.yml
+++ b/scanWithRetryTask.yml
@@ -36,7 +36,7 @@ steps:
       log_output=$($command 2>&1)
       exit_code=$?
       echo "$log_output"
-      if echo "$log_output" | grep "Fatal" | grep "failed to download artifact from any source" | grep -q "failed to download vulnerability DB"; then
+      if echo "$log_output" | grep "Fatal" | grep "failed to download artifact" | grep -q "failed to download vulnerability DB"; then
         count=$((count + 1))
         echo "Scan failed due to DB download error. Attempt $count/$retries. Retrying in 3 seconds..."
         sleep 3
