--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -19,7 +19,26 @@ parameters:
   type: 'string'
   default: ''
   displayName: 'The version of the Docker repository'
-
+- name : trivyCacheAzureSubscription
+  type: string
+  default: ''
+  displayName: 'Subscription used to retrieve Trivy cache. If left empty, no cache will be used.'
+- name : trivyCacheStorageAccountName
+  type: string
+  default: ''
+  displayName: 'Storage account name where the Trivy cache is stored'
+- name : trivyCacheContainerName
+  type: string
+  default: ''
+  displayName: 'Container name where the Trivy cache is stored'
+- name : trivyCacheBlobName
+  type: string
+  default: 'trivy-db.zip'
+  displayName: 'Name of the Zip file containing the Trivy vulnerability DB cache'
+- name: localTrivyDbPath
+  type: string
+  default: $(Agent.TempDirectory)/trivy-db
+  displayName: 'Folder path containing the Trivy vulnerability DB cache'
 
 jobs:
 - job: scanDockerImage
@@ -44,6 +63,11 @@ jobs:
       trivyExtraArguments: "image ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}"
       trivyIgnoreFile: ${{ parameters.trivyIgnoreFile }}
       displayName: Scan image with Trivy
+      trivyCacheAzureSubscription: ${{ parameters.trivyCacheAzureSubscription }}
+      trivyCacheStorageAccountName: ${{ parameters.trivyCacheStorageAccountName }}
+      trivyCacheContainerName: ${{ parameters.trivyCacheContainerName }}
+      trivyCacheBlobName: ${{ parameters.trivyCacheBlobName }}
+      localTrivyDbPath: ${{ parameters.localTrivyDbPath }}
 
 #  The Trivy task does not work yet.
 #    - task: trivy@1
