--- a/scanWithRetryTask.yml
+++ b/scanWithRetryTask.yml
@@ -1,4 +1,24 @@
 parameters:
+- name : trivyCacheAzureSubscription
+  type: string
+  default: ''
+  displayName: 'Subscription used to retrieve Trivy cache. If left empty, no cache will be used.'
+- name : trivyCacheStorageAccountName
+  type: string
+  default: ''
+  displayName: 'Storage account name where the Trivy cache is stored'
+- name : trivyCacheContainerName
+  type: string
+  default: ''
+  displayName: 'Container name where the Trivy cache is stored'
+- name : trivyCacheBlobName
+  type: string
+  default: 'trivy-db.zip'
+  displayName: 'Name of the Zip file containing the Trivy vulnerability DB cache'
+- name: localTrivyDbPath
+  type: string
+  default: $(Agent.TempDirectory)/trivy-db
+  displayName: 'Folder path containing the Trivy vulnerability DB cache'
 - name : dockerExtraArguments
   type: string
   default: ''
@@ -17,19 +37,64 @@ parameters:
   displayName: 'The display name of the task'
 
 steps:
+- ${{ if ne(parameters.azureSubscriptionForTrivy, '') }}:
+  - task: AzureCLI@2
+    displayName: 'Retrieve Trivy cache'
+    inputs:
+      azureSubscription: ${{ parameters.azureSubscriptionForTrivy }}
+      scriptType: bash
+      scriptLocation: inlineScript
+      inlineScript: |
+        echo "Checking provided parameters..."
+        if [ -z "${{ parameters.trivyCacheStorageAccountName }}" ]; then
+          echo "Trivy cache storage account name is not provided."
+          exit 1
+        fi
+        if [ -z "${{ parameters.trivyCacheContainerName }}" ]; then
+          echo "Trivy cache container name is not provided."
+          exit 1
+        fi
+        if [ -z "${{ parameters.trivyCacheBlobName }}" ]; then
+          echo "Trivy cache blob name is not provided."
+          exit 1
+        fi
+        if [ -z "${{ parameters.localTrivyDbPath }}" ]; then
+          echo "Local Trivy DB path is not provided."
+          exit 1
+        fi
+        echo "Retrieving blob storage..."
+        az storage blob download \
+          --account-name ${{ parameters.trivyCacheStorageAccountName }} \
+          --container-name ${{ parameters.trivyCacheContainerName }} \
+          --name ${{ parameters.trivyCacheBlobName }} \
+          --file ${{ parameters.destinationPath }}/${{ parameters.trivyCacheBlobName }} \
+          --auth-mode login
+
+        echo "Unzipping blob..."
+        unzip -o ${{ parameters.destinationPath }}/${{ parameters.trivyCacheBlobName }} -d ${{ parameters.localTrivyDbPath }}
+        echo "Blob retrieved and unzipped successfully."
+
+
 - script: |
     retries=10
     count=0
+    if [ -z "${{ parameters.localTrivyDbPath }}" ]; then
+          echo "Local Trivy DB path is not provided."
+          exit 1
+        fi
     if [ -n "${{ parameters.trivyIgnoreFile }}" ]; then
-      mountArgs="-v ${{ parameters.trivyIgnoreFile }}:/tmp/trivyignore"
-      ignoreFileArgs="--ignorefile /tmp/trivyignore"
+      ignoreMountArgs="-v ${{ parameters.trivyIgnoreFile }}:/tmp/trivyignore"
+      ignoreFileTrivyArgs="--ignorefile /tmp/trivyignore"
       echo "Using ignore file at ${{ parameters.trivyIgnoreFile }}"
     else 
-      mountArgs=""
-      ignoreFileArgs=""
+      ignoreMountArgs=""
+      ignoreFileTrivyArgs=""
       echo "No ignore file specified."
     fi
-    command="docker run --rm -v /var/run/docker.sock:/var/run/docker.sock $mountArgs ${{ parameters.dockerExtraArguments }} aquasec/trivy:latest $ignoreFileArgs --exit-code 1 --format table --scanners vuln,misconfig,secret ${{ parameters.trivyExtraArguments }}"
+    localCacheMountArgs="-v ${{ variables.localTrivyDbPath }}:/mnt/trivy/cache"
+    localCacheTrivyArgs="--cache-dir /mnt/trivy/cache"
+    
+    command="docker run --rm -v /var/run/docker.sock:/var/run/docker.sock $ignoreMountArgs $localCacheMountArgs ${{ parameters.dockerExtraArguments }} aquasec/trivy:latest $ignoreFileTrivyArgs $localCacheTrivyArgs --exit-code 1 --format table --scanners vuln,misconfig,secret ${{ parameters.trivyExtraArguments }}"
     
     echo "Executing '$command' with retries..."
     while [ $count -lt $retries ]; do
