--- a/scanBinaries.yml
+++ b/scanBinaries.yml
@@ -25,10 +25,6 @@ parameters:
   type: string
   default: 'trivy-db.zip'
   displayName: 'Name of the Zip file containing the Trivy vulnerability DB cache'
-- name: localTrivyDbPath
-  type: string
-  default: $(Agent.TempDirectory)/trivy-db
-  displayName: 'Folder path containing the Trivy vulnerability DB cache'
 
 jobs:
 - job: scan  
@@ -59,4 +55,4 @@ jobs:
       trivyCacheStorageAccountName: ${{ parameters.trivyCacheStorageAccountName }}
       trivyCacheContainerName: ${{ parameters.trivyCacheContainerName }}
       trivyCacheBlobName: ${{ parameters.trivyCacheBlobName }}
-      localTrivyDbPath: ${{ parameters.localTrivyDbPath }}
+      localTrivyDbPath: $(Agent.TempDirectory)/trivy-db
