--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -35,10 +35,6 @@ parameters:
   type: string
   default: 'trivy-db.zip'
   displayName: 'Name of the Zip file containing the Trivy vulnerability DB cache'
-- name: localTrivyDbPath
-  type: string
-  default: $(Agent.TempDirectory)/trivy-db
-  displayName: 'Folder path containing the Trivy vulnerability DB cache'
 
 jobs:
 - job: scanDockerImage
@@ -67,7 +63,7 @@ jobs:
       trivyCacheStorageAccountName: ${{ parameters.trivyCacheStorageAccountName }}
       trivyCacheContainerName: ${{ parameters.trivyCacheContainerName }}
       trivyCacheBlobName: ${{ parameters.trivyCacheBlobName }}
-      localTrivyDbPath: ${{ parameters.localTrivyDbPath }}
+      localTrivyDbPath: $(Agent.TempDirectory)/trivy-db
 
 #  The Trivy task does not work yet.
 #    - task: trivy@1
