fixing offline logic

--- a/scanWithRetryTask.yml
+++ b/scanWithRetryTask.yml
@@ -95,9 +95,11 @@ steps:
     localCacheTrivyArgs="--cache-dir /mnt/trivy/cache"
     # If the cache folder is not empty, use the offline mode
     if [ -z "$( ls -A '${{ parameters.localTrivyDbPath }}' )" ]; then
-      offlineTrivyArgs="--offline"
-    else
+      echo "Local cache is empty."
       offlineTrivyArgs=""
+    else
+      echo "Local cache is not empty, running in offline mode."
+      offlineTrivyArgs="--offline"
     fi
     
     command="docker run --rm -v /var/run/docker.sock:/var/run/docker.sock $ignoreMountArgs $localCacheMountArgs ${{ parameters.dockerExtraArguments }} aquasec/trivy:latest $ignoreFileTrivyArgs $localCacheTrivyArgs $offlineTrivyArgs --exit-code 1 --format table --scanners vuln,misconfig,secret ${{ parameters.trivyExtraArguments }}"
