--- a/devops/update-trivy-cache-azure-pipeline.yaml
+++ b/devops/update-trivy-cache-azure-pipeline.yaml
@@ -1,4 +1,4 @@
-# File: devops/azure_pipelines_store_trivy_db.yaml
+# File: devops/update-trivy-cache-azure-pipeline.yaml
 # This pipeline downloads the latest Trivy vulnerability database and stores it in an Azure Blob Storage container.
 
 schedules:
@@ -17,12 +17,14 @@ stages:
   displayName: 'Deploy latest Trivy vulnerability database'
   variables:
   - name: azureSubscription
-    value: $(azureSubscription)
-  - name: trivyVulnerabilityDbStorage
-    value: $(trivyVulnerabilityDbStorage)
+    value: $(azureSubscription) # Set as variable in the pipeline on dev.azure.com
+  - name: trivyCacheStorageAccount
+    value: $(trivyCacheStorageAccount) # Set as variable in the pipeline on dev.azure.com
   - name: trivyVulnerabilityDbContainer
     value: 'trivy-vulnerability-db-cache'
   - name: trivyVulnerabilityDbZipName
+    value: 'trivy-db.zip'
+  - name : trivyCacheBlobName
     value: 'trivy-db.zip'
   - name: localTrivyDbPath
     value: $(Agent.TempDirectory)/trivy-db
@@ -66,25 +68,18 @@ stages:
         artifactName: trivy-db-zip
       displayName: 'Publish Trivy vulnerability database zip file'
 
-
-  - job: deployTrivyVulnerabilityDb
-    dependsOn: retrieveTrivyVulnerabilityDb
-    pool:
-      vmImage: 'windows-latest' # Use a Windows agent to run the AzureFileCopy task
-    steps:  
-    - checkout: none
-    - task: DownloadPipelineArtifact@2
-      inputs:
-        artifactName: trivy-db-zip
-        targetPath: $(Agent.TempDirectory)
-      displayName: 'Download Trivy vulnerability database zip file'
-
-    - task: AzureFileCopy@6
-      inputs:
-        SourcePath: ${{ variables.trivyDbZipPath }}
-        azureSubscription: ${{ variables.azureSubscription }}
-        Destination: 'AzureBlob'
-        storage: ${{ variables.trivyVulnerabilityDbStorage }}
-        ContainerName: ${{ variables.trivyVulnerabilityDbContainer }}
-        BlobPrefix: ${{ variables.trivyVulnerabilityDbZipName }}
-      displayName: 'Upload Trivy vulnerability database to Azure Blob Storage'
+  - task: AzureCLI@2
+    displayName: 'Deploy Trivy cache'
+    inputs:
+      azureSubscription: ${{ variables.azureSubscription }}
+      scriptType: bash
+      scriptLocation: inlineScript
+      inlineScript: |
+        echo "Uploading $trivyDbZipPath to blob storage..."
+        az storage blob upload \
+          --account-name ${{ variables.trivyCacheStorageAccount }} \
+          --container-name ${{ variables.trivyCacheContainerName }} \
+          --name ${{ variables.trivyCacheBlobName }} \
+          --file $trivyDbZipPath \
+          --auth-mode login
+        echo "Blob deployed successfully."
