--- a/scanBinaries.yml
+++ b/scanBinaries.yml
@@ -45,4 +45,4 @@ jobs:
       displayName: Scan compiled code with Trivy
       trivyCacheAzureSubscription: ${{ parameters.trivyCacheAzureSubscription }}
       trivyCacheStorageAccount: ${{ parameters.trivyCacheStorageAccount }}
-      localTrivyDbPath: $(Agent.TempDirectory)/trivy-db
+      localTrivyCachePath: $(Agent.TempDirectory)/trivy-db
